--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <button data-view="escalas">Escalas</button>
         <button data-view="historico">Histórico</button>
         <button data-view="relatorio">Relatórios</button>
+        <button id="close-session">Fechar sessão</button>
+        <button id="toggle-theme">Tema</button>
+        <button id="update-app" style="display:none;">Atualizar app</button>
+        <div id="update-banner" class="banner">Nova versão disponível</div>
       </nav>
     </header>
     <main id="view-container"></main>
